- added support for specifying a entry file for libs

--- a/example/packages/strings/package.json
+++ b/example/packages/strings/package.json
@@ -4,6 +4,7 @@
   "description": "Example strings package",
   "main": "dist/strings.js",
   "types": "dist/strings.d.ts",
+  "packagehubEntry": "strings.ts",
   "scripts": {
     "build": "tsc",
     "build-publish": "npm run build && npm publish",
