--- a/example/packages/math/package.json
+++ b/example/packages/math/package.json
@@ -4,6 +4,7 @@
   "description": "Example math package",
   "main": "dist/math.js",
   "types": "dist/math.d.ts",
+  "packagehubEntry": "math.ts",
   "scripts": {
     "build": "tsc",
     "build-publish": "npm run build && npm publish",
