--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
+    "@types/md5": "^2.3.1",
     "@types/node": "^17.0.6",
     "@types/proper-lockfile": "^4.1.2",
     "@types/uuid": "^8.3.3",
@@ -38,6 +39,7 @@
     "chalk": "^4.1.2",
     "comment-json": "^4.1.1",
     "fs-extra": "^10.0.0",
+    "md5": "^2.3.0",
     "proper-lockfile": "^4.1.2",
     "uuid": "^8.3.2"
   }
